refactor reward status
